[tool.poetry]
name = "lol-champion-gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lol_champion_gen"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
